@@ -52,6 +52,7 @@ int kchartEngine::init() {
   num_hlc_sets = params->has_hlc_sets() ? num_sets : 0;
 
   // And num_points is the number of columns
+  
   num_points = data->cols();
 
   /* idiot checks */
